--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capture-editor",
   "displayName": "Capture Editor",
   "description": "Capture and export your code with syntax highlighting as HTML, preserving VS Code's editor style.",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "engines": {
     "vscode": "^1.91.0"
   },
@@ -59,7 +59,11 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "package:pre": "vsce package --pre-release",
+    "vscode:package": "vsce package",
+    "publish": "vsce publish",
+    "release": "npm run package && npm run publish"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -71,6 +75,7 @@
     "@typescript-eslint/parser": "^7.7.1",
     "@vscode/test-cli": "^0.0.8",
     "@vscode/test-electron": "^2.4.1",
+    "@vscode/vsce": "^3.0.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
@@ -94,13 +99,13 @@
     "documentation",
     "code block"
   ],
-  "publisher": "Sisung Kim",
+  "publisher": "crimson206",
   "repository": {
     "type": "git",
-    "url": "https://github.com/crimson206/editor-capture"
+    "url": "https://github.com/crimson206/capture-editor-ex"
   },
   "bugs": {
-    "url": "https://github.com/crimson206/editor-capture/issues"
+    "url": "https://github.com/crimson206/capture-editor-ex/issues"
   },
-  "homepage": "https://github.com/crimson206/editor-capture"
+  "homepage": "https://github.com/crimson206/capture-editor-ex"
 }
