--- a/package.json
+++ b/package.json
@@ -26,6 +26,16 @@
         "title": "Capture Editor: Capture Multiple Editors as HTML"
       }
     ],
+    "configuration": {
+      "title": "Capture Editor",
+      "properties": {
+        "captureEditor.developerMode": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enable developer mode for additional logging and debugging features."
+        }
+      }
+    },
     "menus": {
       "commandPalette": [
         {
@@ -65,6 +75,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.1",
     "@types/babel__core": "^7.20.5",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
